# raspi-roomcontrol

./: CMakeLists.txt  Makefile
collect/: raspi_roomcontrol.cpp
config/: buildenv
raspi-sensor/: CMakeLists.txt
raspi-sensor/include/: raspi_sensor
raspi-sensor/main/: sensortest.cpp
raspi-sensor/src/: DHT_11_22.cpp  DHT_11_22.hpp  raspi_sensor_common.h
room-datatransfer/: CMakeLists.txt  dependencies.pkgdep
room-datatransfer/main/: RoomStateReceiver.c  RoomStateSender.c
room-datatransfer/src/: Message.h  room_datatransfer_common.h  uvclient.cpp  uvclient.h  uvserver.cpp  uvserver.h
run/: reverse-ssh-tunnel.service  runenv  temperatur.service
sensor-data/: CMakeLists.txt
sensor-data/include/: sensor_data
sensor-data/main/: sensortest.cpp
sensor-data/src/: DataSet.hpp  DataSetHistory.cpp  DataSetHistory.hpp  Fixed.hpp  Time.hpp  UInt32.hpp  UInt64.hpp  sensor_data_common.h
sensor-data/test/: DataSetTest.cpp  FixedTest.cpp
